--- a/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
+++ b/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
@@ -17,7 +17,7 @@ body {
     gap: 20px;
     margin-bottom: 20px;
 }
-button {
+.button {
     background: #282A3A;
     color: #FFF;
     border-radius: 5px;
@@ -148,27 +148,14 @@ button {
 
 .oculto {
     display: none;
-}
-
-.modal {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-}
-
-.modal-content {
-    background: white;
-    padding: 20px;
+    background: #282A3A;
+    color: #FFF;
     border-radius: 5px;
+    padding: 10px 20px;
+    border: 0;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18pt;
+    font-weight: bold;
 }
 
-.oculto {
-    display: none;
-}
