--- a/PROYECTO-MJC memoorize/multijugador/src/css/style.css
+++ b/PROYECTO-MJC memoorize/multijugador/src/css/style.css
@@ -169,14 +169,14 @@ input[type="range"] {
     text-align: center;
 }
 .title-box { 
-    border-radius: 10px;
-    padding: 10px 40px;
+    border-radius: 30px;
+    padding: 10px 100px;
     font-weight: bold;
     font-family:'Pirata One', cursive; 
     background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);
     box-shadow: 0 0 15px rgb(255, 166, 0),
     inset 0 0 10px rgb(44, 166, 227); 
-    font-size: 2.3rem;
+    font-size: 2.1rem;
     bottom: 0%;
     position: relative;
 }
@@ -188,7 +188,7 @@ input[type="range"] {
     transform: scale(1.05);
 }
 .logo {
-    bottom: 5%;
+    bottom: 8%;
     position: relative;
     animation: swashIn 3s ease-in-out infinite;
 }
@@ -229,9 +229,9 @@ input[type="range"] {
     color: white;
     font-family:'Pirata One', cursive; 
     font-size: 1.8rem;
-    top: 30%;
+    top: 70%;
     position: relative;
-    padding: 15px 30px;
+    padding: 15px 50px;
     text-decoration: none; 
     border-radius: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -296,15 +296,17 @@ input[type="range"] {
         font-size: 1.6rem;
         bottom: 0%;
         position: relative;
+        padding: 10px 30px;
     }
     .button-container {
         flex-direction: column;
         gap: 20px;
     }
     .btn-create {
-        margin-bottom: 20px;
+       
         width: 40%;
-        
+        top: 26%;
+        position: relative;
     }
     .btn-join {
         width: 40%;
