--- a/PROYECTO-MJC memoorize/login/src/css/style.css
+++ b/PROYECTO-MJC memoorize/login/src/css/style.css
@@ -32,19 +32,42 @@ body{
     text-shadow: 3px 3px 0px #ffffff07,   
                  6px 6px 0px #8b451300;  
     position: relative;
-    padding: 18px;
-    border: 5px solid #b1891b; 
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border-radius: 30px; 
-    background: radial-gradient(circle, rgba(255, 255, 0, 0.63) 0%, rgba(38, 28, 104, 0.619) 100%);
-    box-shadow: 0 0 15px rgba(162, 133, 82, 0.6),
-                inset 0 0 10px rgb(0, 170, 255); 
-    opacity: 1;
-    transition: 200ms;
-    margin-bottom: 0%;
+    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    display: flex;
+    bottom: 10vh;
 }
-#formulario:hover{
-    transform: none;
-    box-shadow: 0px 0px 40px rgb(0, 0, 0);
+#formulario::after {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    background-size: 400%;
+    border-radius: 15px;
+    filter: blur(5px);
+    z-index: -1;
+    animation: animate 20s linear infinite;
+}
+@keyframes animate {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
 }
 .logoForm{
     margin: auto;
