--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -52,7 +52,7 @@ body{
     border: 3px solid #3b2944;
     border-radius: 10px;
     padding: 8px 8px;
-    right: 13vh;
+    right: 15vh;
     bottom: 86vh;
     box-shadow: 0 4px 0 #fdfdfd;
     position: absolute;
@@ -169,19 +169,35 @@ body{
   .modal-footer {
       border: none;
   }
+  .modal,
+.modal-dialog {
+    box-shadow: none !important;
+}
+
+.modal-backdrop {
+    background-color: transparent !important; 
+}
   .modal-content {
-      border: none;
-      box-shadow: none; 
-  }
+    padding: 20px;
+    font-family: 'Pirata One', cursive; 
+    font-size: 22px;
+    border: 5px solid #ffcc00; 
+    text-shadow: 3px 3px 0px #ffffff00,   
+    6px 6px 0px #8b451300; 
+    border: none;
+      box-shadow: none;
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%);
+    box-shadow: 0 0 15px rgb(255, 166, 0),
+    inset 0 0 10px rgb(44, 166, 227); 
+    background-repeat: no-repeat; 
+    background-position: center;
+
+}
   
 .modal .btn-close {
     width: 20px;
     height: 20px;
-}
-.modal .btn-close {
-    background-color: #333; 
-    color: white;          
-    opacity: 1;             
 }
 .modal .btn-close {
     border-radius: 50%;         
@@ -192,6 +208,22 @@ body{
     background-color: #555;
     color: #ffcc00;
     border-color: #ffcc00;
+}
+.modal-header .btn-close {
+    border: none; 
+    font-size: 1.5rem; 
+    border-bottom: none;
+    width: 40px;
+    height: 40px; 
+    background-color: transparent;
+    border: none;
+    transition: background-color 0.3s;
+}
+
+
+.modal-header .btn-close:hover {
+    background-color: rgba(182, 182, 182, 0.7); 
+    color: #FFFFFF; 
 }
 .modal-footer .btn-secondary {
     background-color: #ffcc00;; 
@@ -212,40 +244,28 @@ body{
     transform: scale(1.05); 
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3); 
 }
-input[type="range"]::-moz-range-thumb:hover {
-    background: #3498db; 
+
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin-top: 20px;
 }
-input[type="range"]::-moz-range-thumb {
-    width: 20px;
-    height: 20px;
-    background: #ffffff;
-    border: 2px solid #3498db;
+
+.round-button {
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     cursor: pointer;
-    transition: background 0.3s ease;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
-input[type="range"]::-webkit-slider-thumb:hover {
-    background: #3498db; 
+
+.red-button {
+    background-color: #ff6a6a;
 }
-input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none; 
-    appearance: none; 
-    width: 20px; 
-    height: 20px; 
-    background: #ffffff; 
-    border: 2px solid #3498db; 
-    border-radius: 50%; 
-    cursor: pointer; 
-    transition: background 0.3s ease;
-}
-input[type="range"] {
-    
-    width: 35%; 
-    height: 8px; 
-    background: linear-gradient(90deg, #3498db 0%, #9b59b6 100%); 
-    border-radius: 5px; 
-    outline: none;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3); 
+
+.orange-button {
+    background-color: #ffc76a;
 }
 /*botones*/
 .comprar-button{
@@ -255,7 +275,7 @@ input[type="range"] {
     padding: 8px 8%;
     position: relative;
     left: 20%;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;    
     color: #333;
     cursor: pointer;
@@ -263,7 +283,7 @@ input[type="range"] {
 }
 /*tienda*/
 .info-producto{
-   font-size: 90%;
+   font-size: 70%;
 }
 #descripcion-producto1{
     width: 30px;
@@ -271,8 +291,8 @@ input[type="range"] {
     height: 30px;
 }
 .producto1 img{
-    width: 80%;
-    height: 80%;    
+    width: 70%;
+    height: 0%;    
 }
 .producto1{
     background-color: #ffffff46;
@@ -698,14 +718,7 @@ img.imgSonido {
 .avatar-option2:hover {
     border: 2px solid blue; 
 }
-.modal,
-.modal-dialog {
-    box-shadow: none !important;
-}
 
-.modal-backdrop {
-    background-color: transparent !important; 
-}
 
 .change-avatar {
     background-image: url(../../img/slide_14447667.gif);
@@ -728,21 +741,7 @@ img.imgSonido {
 .change-avatar:hover {
     background-color: #0056b3;
 }
-.modal-content {
-    padding: 20px;
-    font-family: 'Pirata One', cursive; 
-    font-size: 22px;
-    border: 5px solid #ffcc00; 
-    text-shadow: 3px 3px 0px #ffffff00,   
-    6px 6px 0px #8b451300; 
-    border-radius: 30px; 
-    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%);
-    box-shadow: 0 0 15px rgb(255, 166, 0),
-    inset 0 0 10px rgb(44, 166, 227); 
-    background-repeat: no-repeat; 
-    background-position: center;
 
-}
 #editProfileForm .form-label {
     font-size: 1.2rem;
     font-weight: bold;
@@ -782,22 +781,7 @@ img.imgSonido {
     color: #ff5722;
     font-weight: bold;
 }
-.modal-header .btn-close {
-    border: none; 
-    font-size: 1.5rem; 
-    border-bottom: none;
-    width: 40px;
-    height: 40px; 
-    background-color: transparent;
-    border: none;
-    transition: background-color 0.3s;
-}
 
-
-.modal-header .btn-close:hover {
-    background-color: rgba(182, 182, 182, 0.7); 
-    color: #FFFFFF; 
-}
 #volumeControl{
     display: flex;
     justify-content: center;
@@ -1195,5 +1179,8 @@ nav {
     .comprar-button {
         left: 2%;
     }   
+    .info-producto{
+        font-size: 90%;
+     }
     
 }
