--- a/PROYECTO-MJC memoorize/multijugador/src/css/style.css
+++ b/PROYECTO-MJC memoorize/multijugador/src/css/style.css
@@ -91,41 +91,6 @@ body{
     background-color: rgba(182, 182, 182, 0.7); 
     color: #FFFFFF; 
 }
-input[type="range"]::-moz-range-thumb:hover {
-    background: #3498db; 
-}
-input[type="range"]::-moz-range-thumb {
-    width: 20px;
-    height: 20px;
-    background: #ffffff;
-    border: 2px solid #3498db;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background 0.3s ease;
-}
-input[type="range"]::-webkit-slider-thumb:hover {
-    background: #3498db; 
-}
-input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none; 
-    appearance: none; 
-    width: 20px; 
-    height: 20px; 
-    background: #ffffff; 
-    border: 2px solid #3498db; 
-    border-radius: 50%; 
-    cursor: pointer; 
-    transition: background 0.3s ease;
-}
-input[type="range"] {
-   
-    width: 35%; 
-    height: 8px; 
-    background: linear-gradient(90deg, #3498db 0%, #9b59b6 100%); 
-    border-radius: 5px; 
-    outline: none;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3); 
-}
 .menu {
     position: fixed;
     top: 10px;
@@ -282,10 +247,10 @@ input[type="range"] {
     }
     .menu {
         position: fixed;
-        right: 6%;
-        background-color: #33333300;
+        top: 10px;
+        right: 23px;
+    
     }
-
     .imgSonido {
         width: 30px;
     }
